# ludivina

./: .gitignore  README.md  config.py  exceptions.py  image.py  main.py  pypenv.run  pyproject.toml  utils.py
tests/: test_ludivina.py
utils/: ludivina.service  simcom.service  simcom.sh  simcom.timer  simcom_post.sh  simcom_pre.sh
